--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <li><a href="#">Impianti e piste</a></li>
                         <li><a href="#">Skipass Shop</a></li>
                         <li><a href="#">Rifugi e servizi</a></li>
-                        <li><a href="#">Info</a></li>
+                        <li><a href="info.html">Info</a></li>
                     </ul>
                 </div>
                 <div id="user">
@@ -43,6 +43,11 @@
         </div>
         <div id="banner">
             <img id="img-banner" src="images/novita_sci-e-piste-ski-center-latemar-obereggen-1-e1562839810897.jpg">
+        </div>
+        <div id="content">
+            <div id="content-header">
+                <h2>Benvenuti nello Ski Center Dolomiti</h2>
+            </div>
         </div>
     </body>
 </html>
