--- a/info.html
+++ b/info.html
@@ -1,9 +1,80 @@
-<html>
+<!DOCTYPE html>
+</html lang="it">
     <head>
-
+        <title>Info</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet"> 
     </head>
     <body>
-        <p>Come arrivare</p>
-        <p>Contatti</p>
+        <div id="header">
+            <div id="logo-container">
+                <a href="#">
+                <img id="logo" src="images/logo.png" alt="logo">
+                </a>
+            </div>
+
+            <div id="navbar">
+                <div id="navigation">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">Impianti e piste</a></li>
+                        <li><a href="#">Skipass Shop</a></li>
+                        <li><a href="#">Rifugi e servizi</a></li>
+                        <li><a class="active" href="#">Info</a></li>
+                    </ul>
+                </div>
+                <div id="user">
+                    <ul>
+                        <li><a href="#">Accedi</a></li>
+                        <li><a href="#">Registrati</a></li>
+                    </ul>
+                </div>         
+            </div>
+
+            <div id="breadcrumb">
+                <p>
+                    Ti trovi in: 
+                    <span xml:lang="en">Info</span>
+                </p>
+            </div>
+        </div>
+        <div id="info-contatti">
+            <h1>contatti</h1>
+            <h2>contatti uffici ski-pass</h2>
+            <p>
+                OBEREGGEN LATEMAR S.p.A.<br>
+                Via Obereggen 16 – 39050 – OBEREGGEN (BZ)<br>
+                Tel <a href="tel:+390471618200">0471.618200</a><br>
+                Fax 0471.615637<br>
+                e-mail&nbsp;<a href="mailto:obereggen@latemar.it">obereggen@latemar.it</a>
+            </p>
+            <h2>contatti scuola di sci</h2>
+            <p>
+                Scuola Ski&nbsp;e Snowboard Obereggen</strong><br>
+                I-39050&nbsp; Obereggen<br>
+                Tel <a href="tel:+390471615667">0471.615667</a><br>
+                Fax 0471.618163<br>
+                e-mail&nbsp;<a href="mailto:info@obereggenski.com">info@obereggenski.com</a><br>
+                <a href="http://www.obereggenski.com/" target="_blank" rel="noopener noreferrer">www.obereggenski.com</a>
+            </p>
+        </div>
+        <div id="come-arrivare">
+            <h1>come arrivare</h1>
+            <h2>in automobile</h2>
+            <ul>
+                <li>Dall’autostrada Brennero/Modena (A22) prendere l’uscita di Egna/Ora seguire la Statale delle Dolomiti (S.S.48) per Cavalese.</li>
+                <li>Dall’autostrada Brennero/Modena (A22) uscire a Trento nord, immettersi nella S.S. 12 e all’altezza di Lavis seguire per la Valle di Cembra e continuare in direzione Cavalese.</li>
+                <li>Dall’autostrada Venezia/Ponte delle Alpi (A27) prendere l’uscita di Belluno e seguire le indicazioni per Agordo (S.S.203). Seguire poi per Falcade e attraversare il Passo S.Pellegrino (S.S.346), fino a Moena da dove è possibile prendere la S.S.48 che collega la valle.</li>
+                <li>Dalla Strada Statale 47 in direzione nord, poco dopo Cismon del Grappa, immettersi nella S.S.50. Seguire le indicazione per S.Martino di Castrozza, attraversare il Passo Rolle, e continuare fino a raggiungere Predazzo e la S.S.48 delle Dolomiti.</li>
+            </ul>
+            <h2>in autobus</h2>
+            <p>Trentino Trasporti con i propri servizi collega tra loro i vari Comuni nella provincia di Trento.
+                I titoli di viaggio e gli abbonamenti sono venduti dalle biglietterie a terra di Trento, Rovereto, Riva del Garda, Borgo Valsugana, Fiera di Primiero, Tione, Predazzo, Cavalese, Canazei, Moena, Arco, Mori, Comano/Ponte Arche e Pergine Valsugana e Levico con un massimo di 15 giorni. Per tratti extraurbani è possibile acquistare i biglietti anche sui mezzi.</p>
+            <h2>in treno</h2>
+            <p>Chi preferisce il treno può proseguire dalla stazione di Bolzano con il bus di linea o il taxi che lo condurrà in circa 30 minuti a Obereggen. Molti esercizi dispongono di un servizio navetta gratuito.</p>
+        </div>
     </body>
 </html>
