--- a/info.html
+++ b/info.html
@@ -20,7 +20,7 @@
                 <div id="navigation">
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="#">Impianti e piste</a></li>
+                        <li><a href="piste.html">Impianti e piste</a></li>
                         <li><a href="#">Skipass Shop</a></li>
                         <li><a href="#">Rifugi e servizi</a></li>
                         <li><a class="active" href="#">Info</a></li>
