--- a/piste.html
+++ b/piste.html
@@ -1,14 +1,84 @@
-<html>
+</html lang="it">
     <head>
-        <title>Piste</title>
+        <title>Piste e strutture</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet"> 
     </head>
     <body>
-        <p>
-            Varie tipologie di piste, più livelli di difficoltà, tot km di piste, davvero per tutti!
-            Pista nera - x km - Breve descrizione
-            Pista rossa - x km - Breve descrizione
-            Pista bianca - x km - Breve descrizione
-            Snow Park - tipologia linee
-        </p>
+        <div id="header">
+            <div id="logo-container">
+                <a href="#">
+                <img id="logo" src="images/logo.png" alt="logo">
+                </a>
+            </div>
+
+            <div id="navbar">
+                <div id="navigation">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a class="active" href="piste.html">Impianti e piste</a></li>
+                        <li><a href="#">Skipass Shop</a></li>
+                        <li><a href="#">Rifugi e servizi</a></li>
+                        <li><a href="info.html">Info</a></li>
+                    </ul>
+                </div>
+                <div id="user">
+                    <ul>
+                        <li><a href="#">Accedi</a></li>
+                        <li><a href="#">Registrati</a></li>
+                    </ul>
+                </div>         
+            </div>
+
+            <div id="breadcrumb">
+                <p>
+                    Ti trovi in: 
+                    <span xml:lang="en">Piste e strutture</span>
+                </p>
+            </div>
+        </div>
+        <div id="Piste">
+            <h2>Lo Ski Center Dolomiti: curiosità sul comprensorio sciistico</h2>
+            <table class="t_eventi">
+            <thead>
+            <tr>
+            <th>Le piste da sci (difficoltà)</th>
+            <th>KM</th>
+            <th>numero di piste</th>
+            <th>%</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+            <td>BLU (facili)</td>
+            <td>9 Km</td>
+            <td>10 Piste</td>
+            <td>19 %</td>
+            </tr>
+            <tr>
+            <td>ROSSE (medie)</td>
+            <td>33 Km</td>
+            <td>22 Piste</td>
+            <td>67 %</td>
+            </tr>
+            <tr>
+            <td>NERE (difficili)</td>
+            <td>7 Km</td>
+            <td>8 Piste</td>
+            <td>14 %</td>
+            </tr>
+            </tbody>
+            </table>
+        </div>
+
+        <div id="info">
+            <p>
+                Un modernissimo sistema di innevamento e giornate da favola per tutta la stagione sciistica invernale. Con lo skipass Val di Fiemme ti muovi in tutto il comprensorio a mani libere: quando prendi gli impianti si attiva la chipcard, via libera! Sensori e microchip spalancano scenari dolomitici ogni giorno diversi, in una delle più belle località sciistiche della stagione invernale.
+                Nei rifugi dello Ski Center Latemar trovi i piatti della tradizione trentina, altoatesina e della Val di Fiemme: cucina gourmet, terrazze soleggiate, design e ambienti rilassanti, musica e divertimento. Tutti i rifugi sono vicini alle piste, puoi arrivare con gli sci ai piedi e tre giorni a settimana puoi sciare e slittare anche di notte.
+            </p>
+        </div>
     </body>
 </html>
