--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
                 <div id="navigation">
                     <ul>
                         <li><a class="active" href="#">Home</a></li>
-                        <li><a href="#">Impianti e piste</a></li>
-                        <li><a href="#">Skipass Shop</a></li>
+                        <li><a href="#">Piste</a></li>
+                        <li><a href="#">Tariffe</a></li>
                         <li><a href="#">Rifugi e servizi</a></li>
+                        <li><a href="#">Eventi</a></li>
+                        <li><a href="#">Recensioni</a></li>
                         <li><a href="info.html">Info</a></li>
+                        
                     </ul>
                 </div>
                 <div id="user">
@@ -41,8 +44,9 @@
                 </p>
             </div>
         </div>
+        <!--src="images/novita_sci-e-piste-ski-center-latemar-obereggen-1-e1562839810897.jpg" -->
         <div id="banner">
-            <img id="img-banner" src="images/novita_sci-e-piste-ski-center-latemar-obereggen-1-e1562839810897.jpg">
+            <img id="img-banner" src="images/hero-crop.jpg">
         </div>
         <div id="content">
             <div id="content-header">
