--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div id="user">
                     <ul>
                         <li><a href="#">Accedi</a></li>
-                        <li><a href="#">Registrati</a></li>
+                        <li><a href="registrati.html">Registrati</a></li>
                     </ul>
                 </div>         
             </div>
