--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
                 <div id="navigation">
                     <ul>
                         <li><a class="active" href="#">Home</a></li>
-                        <li><a href="#">Piste</a></li>
-                        <li><a href="#">Tariffe</a></li>
-                        <li><a href="#">Rifugi e servizi</a></li>
-                        <li><a href="#">Eventi</a></li>
-                        <li><a href="#">Recensioni</a></li>
+                        <li><a href="piste.html">Piste</a></li>
+                        <li><a href="tariffe_e_orari.html">Tariffe</a></li>
+                        <li><a href="rifugi e servizi.html">Rifugi e servizi</a></li>
+                        <li><a href="recensioni.html">Recensioni</a></li>
                         <li><a href="info.html">Info</a></li>
                         
                     </ul>
