--- a/info.html
+++ b/info.html
@@ -19,19 +19,21 @@
             <div id="navbar">
                 <div id="navigation">
                     <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="piste.html">Impianti e piste</a></li>
-                        <li><a href="#">Skipass Shop</a></li>
+                        <li><a class="active" href="#">Home</a></li>
+                        <li><a href="#">Piste</a></li>
+                        <li><a href="#">Tariffe</a></li>
                         <li><a href="#">Rifugi e servizi</a></li>
-                        <li><a class="active" href="#">Info</a></li>
+                        <li><a href="#">Recensioni</a></li>
+                        <li><a href="info.html">Info</a></li>
+                        
                     </ul>
                 </div>
                 <div id="user">
                     <ul>
                         <li><a href="#">Accedi</a></li>
-                        <li><a href="#">Registrati</a></li>
+                        <li><a href="registrati.html">Registrati</a></li>
                     </ul>
-                </div>         
+                </div>        
             </div>
 
             <div id="breadcrumb">
