--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <div id="navbar">
                 <div id="navigation">
                     <ul>
-                        <li><a class="active" href="#">Home</a></li>
+                        <li><a class="active" href="index.html">Home</a></li>
                         <li><a href="piste.html">Piste</a></li>
-                        <li><a href="tariffe_e_orari.html">Tariffe</a></li>
+                        <li><a href="tariffe_e_orari.html">Tariffe e orari</a></li>
                         <li><a href="rifugi e servizi.html">Rifugi e servizi</a></li>
                         <li><a href="recensioni.html">Recensioni</a></li>
                         <li><a href="info.html">Info</a></li>
