--- a/piste.html
+++ b/piste.html
@@ -1,6 +1,6 @@
 </html lang="it">
     <head>
-        <title>Piste e strutture</title>
+        <title>Piste</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -18,11 +18,11 @@
             <div id="navbar">
                 <div id="navigation">
                     <ul>
-                        <li><a class="active" href="#">Home</a></li>
-                        <li><a href="#">Piste</a></li>
-                        <li><a href="#">Tariffe</a></li>
-                        <li><a href="#">Rifugi e servizi</a></li>
-                        <li><a href="#">Recensioni</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a class="active" href="piste.html">Piste</a></li>
+                        <li><a href="tariffe_e_orari.html">Tariffe e orari</a></li>
+                        <li><a href="rifugi e servizi.html">Rifugi e servizi</a></li>
+                        <li><a href="recensioni.html">Recensioni</a></li>
                         <li><a href="info.html">Info</a></li>
                         
                     </ul>
@@ -32,13 +32,13 @@
                         <li><a href="#">Accedi</a></li>
                         <li><a href="registrati.html">Registrati</a></li>
                     </ul>
-                </div>          
+                </div>         
             </div>
 
             <div id="breadcrumb">
                 <p>
                     Ti trovi in: 
-                    <span xml:lang="en">Piste e strutture</span>
+                    <span xml:lang="en">Piste</span>
                 </p>
             </div>
         </div>
