--- a/registrati.html
+++ b/registrati.html
@@ -21,9 +21,10 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="piste.html">Piste</a></li>
-                        <li><a href=""></a>Rifugi e Servizi</li>
-                        <li><a href="#">Tariffe</a></li>
-                        <li><a href="#">Info</a></li>
+                        <li><a href="tariffe_e_orari.html">Tariffe e orari</a></li>
+                        <li><a href="rifugi e servizi.html">Rifugi e servizi</a></li>
+                        <li><a href="recensioni.html">Recensioni</a></li>
+                        <li><a href="info.html">Info</a></li>
                     </ul>
                 </div>
                 <div id="user">
