--- a/info.html
+++ b/info.html
@@ -19,12 +19,12 @@
             <div id="navbar">
                 <div id="navigation">
                     <ul>
-                        <li><a class="active" href="#">Home</a></li>
-                        <li><a href="#">Piste</a></li>
-                        <li><a href="#">Tariffe</a></li>
-                        <li><a href="#">Rifugi e servizi</a></li>
-                        <li><a href="#">Recensioni</a></li>
-                        <li><a href="info.html">Info</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="piste.html">Piste</a></li>
+                        <li><a href="tariffe_e_orari.html">Tariffe e orari</a></li>
+                        <li><a href="rifugi e servizi.html">Rifugi e servizi</a></li>
+                        <li><a href="recensioni.html">Recensioni</a></li>
+                        <li><a class="active" href="info.html">Info</a></li>
                         
                     </ul>
                 </div>
@@ -33,7 +33,7 @@
                         <li><a href="#">Accedi</a></li>
                         <li><a href="registrati.html">Registrati</a></li>
                     </ul>
-                </div>        
+                </div>         
             </div>
 
             <div id="breadcrumb">
