--- a/registrati.html
+++ b/registrati.html
@@ -49,16 +49,16 @@
     <hr>
 
     <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" id="email" required>
+    <input type="text" placeholder="Inserisci Email" name="email" id="email" required>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
+    <input type="password" placeholder="Crea Password" name="psw" id="psw" required>
 
     <label for="psw-repeat"><b>Reinserisci Password</b></label>
-    <input type="password" placeholder="Repeat Password" name="psw-repeat" id="psw-repeat" required>
+    <input type="password" placeholder="Ripeti Password" name="psw-repeat" id="psw-repeat" required>
     <hr>
 
-    <p>Creando un account accetti i nostri<a href="#">Termini e Privacy</a>.</p>
+    <p>Creando un account accetti i nostri<a href="#"> Termini e Privacy</a>.</p>
     <button type="submit" class="registerbtn">Registrati</button>
   </div>
 
