--- a/accedi.html
+++ b/accedi.html
@@ -53,10 +53,10 @@
     <label for="psw"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
     <hr>
-    <button type="submit" class="loginbtn">Accedi</button>
+    <button type="submit" class="registerbtn">Accedi</button>
   </div>
 
   <div class="container signin">
-    <p>Non ancora registrato?<a href="registrati.html"></a>Registrati</p>
+    <p>Non ancora registrato? <a href="registrati.html">Registrati</a>.</p>
   </div>
 </form>
