--- a/registrati.html
+++ b/registrati.html
@@ -58,11 +58,11 @@
     <input type="password" placeholder="Ripeti Password" name="psw-repeat" id="psw-repeat" required>
     <hr>
 
-    <p>Creando un account accetti i nostri<a href="#"> Termini e Privacy</a>.</p>
+    <p>Creando un account accetti i nostri <a href="#">Termini e Privacy</a>.</p>
     <button type="submit" class="registerbtn">Registrati</button>
   </div>
 
   <div class="container signin">
-    <p>Già registrato? <a href="#">Accedi</a>.</p>
+    <p>Già registrato? <a href="accedi.html">Accedi</a>.</p>
   </div>
 </form>
