--- a/accedi.html
+++ b/accedi.html
@@ -47,10 +47,10 @@
     <h1>Accedi</h1>
     <hr>
     <label for="email"><b>Email</b></label>
-    <input type="text" placeholder="Enter Email" name="email" id="email" required>
+    <input type="text" placeholder="Inserisci Email" name="email" id="email" required>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" id="psw" required>
+    <input type="password" placeholder="Inserisci Password" name="psw" id="psw" required>
     <hr>
     <button type="submit" class="registerbtn">Accedi</button>
   </div>
