--- a/registrati.html
+++ b/registrati.html
@@ -29,7 +29,7 @@
                 </div>
                 <div id="user">
                     <ul>
-                        <li><a href="#">Accedi</a></li>
+                        <li><a href="accedi.html">Accedi</a></li>
                         <li><a class="active" href="registrati.html">Registrati</a></li>
                     </ul>
                 </div>         
