sistemato alt per accessibilità

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <!--src="images/novita_sci-e-piste-ski-center-latemar-obereggen-1-e1562839810897.jpg" -->
         <div id="banner">
-            <img id="img-banner" src="images/hero-crop.jpg">
+            <img id="img-banner" src="images/hero-crop.jpg" alt="Immagine di Benvenuto">
         </div>
         <div id="content">
             <div id="content-header">
