script per la stampa //da rivedere

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 </p>
             </div>
         </div>
+        <script src="javascript/jscript.js"></script>
         <!--src="images/novita_sci-e-piste-ski-center-latemar-obereggen-1-e1562839810897.jpg" -->
         <div id="banner">
             <img id="img-banner" src="images/hero-crop.jpg" alt="Immagine di Benvenuto">
