--- a/registrati.html
+++ b/registrati.html
@@ -47,7 +47,7 @@
     <h1>Registrati</h1>
     <p>Compila questi campi per creare il tuo account</p>
     <hr>
-    <?php include 'functions.php';?>
+    <?php include 'php/functions.php';?>
     <label for="email"><b>Email</b></label>
     <input type="text" placeholder="Inserisci Email" name="email" id="email" required>
 
