Aggiunta testo in /Home

--- a/index.html
+++ b/index.html
@@ -51,6 +51,30 @@
         <div id="content">
             <div id="content-header">
                 <h2>Benvenuti nello Ski Center Dolomiti</h2>
+                <p>
+                    La Ski Center Dolomiti fa parte del comprensorio sciistico Dolomiti Superski e si trova nel cuore pulsante delle Dolomiti Unesco, 
+                    tra le Valli di Fassa e Fiemme, in Trentino, dove le tue vacanze sulla neve si colorano di sport, relax e divertimento. 
+                    Scegli la tua attività preferita tra sci, snowboard, slittino, ciaspole o trekking e goditi la stuzzicante offerta gastronomica con 
+                    vista presso uno dei rifugi presenti sull’area.
+                </p>
+
+                <h3>Un luogo magico dedicato agli amanti della montagna...</h3>
+                <p>
+                    L’area offre 30 Km di piste sempre perfettamente preparate, grazie all'innevamento programmato durante tutta la stagione invernale e 
+                    all’impiego delle più avanzate tecnologie di settore. 
+                    Le piste del versante nord sono più tecniche, ripide e coinvolgenti per il divertimento degli sciatori più esigenti ed offrono 
+                    un'incantevole vista sul gruppo del Catinaccio. 
+                    Il versante sud invece, con le sue ampie e soleggiate piste blu è il luogo di riferimento d’eccellenza per le famiglie con bambini e 
+                    per i principianti. I bambini potranno partecipare a divertenti attività ricreative nei nostri parchi giochi sulla neve e 
+                    sperimentare le prime sciate con i maestri di sci sui nostri campi scuola.
+                </p>
+
+                <h3>E se non scio?</h3>
+                <p>
+                    Niente paura! In alternativa allo sci potrai concederti un’emozionante discesa con lo slittino lungo la pista dedicata o una 
+                    rigenerante camminata nel bosco innevato, e a seguire, un delizioso pranzo tipico della cucina trentina presso uno dei rifugi 
+                    presenti su tutta l'area.
+                </p>
             </div>
         </div>
         </div>
