--- a/index.html
+++ b/index.html
@@ -57,24 +57,38 @@
                     Scegli la tua attività preferita tra sci, snowboard, slittino, ciaspole o trekking e goditi la stuzzicante offerta gastronomica con 
                     vista presso uno dei rifugi presenti sull’area.
                 </p>
+                <div id="content-wrapper1" class="content-wrapper">
+                    <div id="image-wrapper1">
+                        <img src="images/sextner-dolomiten.jpg" alt="foto della pista da sci">
+                    </div>
+                    <div id="text-box1" class="text-box">
+                        <h3>Un luogo magico dedicato agli amanti della montagna...</h3>
+                        <p>
+                            30 Km di piste sempre perfettamente preparate, grazie all'innevamento programmato durante tutta la stagione invernale e 
+                            all’impiego delle più avanzate tecnologie di settore.
+                        </p>
+                        <p>
+                            Piste tecniche, ripide e coinvolgenti per il divertimento degli sciatori più esigenti
+                        </p>
+                        <p>
+                            Piste più semplici, luogo di riferimento d’eccellenza per le famiglie con bambini e per i principianti. 
+                        </p>
+                    </div>
+                </div>
 
-                <h3>Un luogo magico dedicato agli amanti della montagna...</h3>
-                <p>
-                    L’area offre 30 Km di piste sempre perfettamente preparate, grazie all'innevamento programmato durante tutta la stagione invernale e 
-                    all’impiego delle più avanzate tecnologie di settore. 
-                    Le piste del versante nord sono più tecniche, ripide e coinvolgenti per il divertimento degli sciatori più esigenti ed offrono 
-                    un'incantevole vista sul gruppo del Catinaccio. 
-                    Il versante sud invece, con le sue ampie e soleggiate piste blu è il luogo di riferimento d’eccellenza per le famiglie con bambini e 
-                    per i principianti. I bambini potranno partecipare a divertenti attività ricreative nei nostri parchi giochi sulla neve e 
-                    sperimentare le prime sciate con i maestri di sci sui nostri campi scuola.
-                </p>
-
-                <h3>E se non scio?</h3>
-                <p>
-                    Niente paura! In alternativa allo sci potrai concederti un’emozionante discesa con lo slittino lungo la pista dedicata o una 
-                    rigenerante camminata nel bosco innevato, e a seguire, un delizioso pranzo tipico della cucina trentina presso uno dei rifugi 
-                    presenti su tutta l'area.
-                </p>
+                <div id="content-wrapper2" class="content-wrapper">
+                    <div id="image-wrapper2">
+                        <img src="images/slittino.jpg" alt="bambini che giocano con lo slittino">
+                    </div>
+                    <div id="text-box2" class="text-box">
+                        <h3>E se non scio?</h3>
+                        <p>
+                            Niente paura! In alternativa allo sci potrai concederti un’emozionante discesa con lo slittino lungo la pista dedicata o una 
+                            rigenerante camminata nel bosco innevato, e a seguire, un delizioso pranzo tipico della cucina trentina presso uno dei rifugi 
+                            presenti su tutta l'area.
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
         </div>
