--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-</html lang="it">
+<html lang="it">
     <head>
         <title>Home</title>
         <meta charset="UTF-8">
@@ -46,7 +46,7 @@
         <script src="javascript/jscript.js"></script>
         <!--src="images/novita_sci-e-piste-ski-center-latemar-obereggen-1-e1562839810897.jpg" -->
         <div id="banner">
-            <img id="img-banner" src="images/hero-crop.jpg" alt="Immagine di Benvenuto">
+            <img id="img-banner" src="images/hero-crop.jpg" alt="vista panoramica della pista nera">
         </div>
         <div id="content">
             <div id="content-header">
@@ -59,7 +59,7 @@
                 </p>
                 <div id="content-wrapper1" class="content-wrapper">
                     <div id="image-wrapper1">
-                        <img src="images/sextner-dolomiten.jpg" alt="foto della pista da sci">
+                        <img src="images/sextner-dolomiten.jpg" alt="due persone mentre percorrono la pista con gli sci">
                     </div>
                     <div id="text-box1" class="text-box">
                         <h3>Un luogo magico dedicato agli amanti della montagna...</h3>
@@ -78,7 +78,7 @@
 
                 <div id="content-wrapper2" class="content-wrapper">
                     <div id="image-wrapper2">
-                        <img src="images/slittino.jpg" alt="bambini che giocano con lo slittino">
+                        <img src="images/slittino.jpg" alt="famiglia che percorre la pista dedicata agli slittini">
                     </div>
                     <div id="text-box2" class="text-box">
                         <h3>E se non scio?</h3>
