--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="header">
             <div id="logo-container">
                 <a href="#">
-                <img id="logo" src="images/logo.png" alt="logo">
+                <img id="logo" src="images/logo.png" alt="immagine logo">
                 </a>
             </div>
 
