--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="header">
             <div id="logo-container">
                 <a href="#">
-                <img id="logo" src="images/logo.png" alt="immagine logo">
+                <img id="logo" src="images/logo.png" alt="logo SkiCenter">
                 </a>
             </div>
 
@@ -50,7 +50,7 @@
         </div>
         <div id="content">
             <div id="content-header">
-                <h2>Benvenuti nello Ski Center Dolomiti</h2>
+                <h1>Benvenuti nello Ski Center Dolomiti</h1>
                 <p>
                     La Ski Center Dolomiti fa parte del comprensorio sciistico Dolomiti Superski e si trova nel cuore pulsante delle Dolomiti Unesco, 
                     tra le Valli di Fassa e Fiemme, in Trentino, dove le tue vacanze sulla neve si colorano di sport, relax e divertimento. 
