--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                     vista presso uno dei rifugi presenti sull’area.
                 </p>
                 <div id="content-wrapper1" class="content-wrapper">
-                    <div id="image-wrapper1">
+                    <div id="image-wrapper1" class="float-to-left">
                         <img src="images/sextner-dolomiten.jpg" alt="due persone mentre percorrono la pista con gli sci">
                     </div>
-                    <div id="text-box1" class="text-box">
+                    <div id="text-box1" class="text-box float-to-left">
                         <h3>Un luogo magico dedicato agli amanti della montagna...</h3>
                         <p>
                             30 Km di piste sempre perfettamente preparate, grazie all'innevamento programmato durante tutta la stagione invernale e 
@@ -77,10 +77,10 @@
                 </div>
 
                 <div id="content-wrapper2" class="content-wrapper">
-                    <div id="image-wrapper2">
+                    <div id="image-wrapper2" class="float-to-right">
                         <img src="images/slittino.jpg" alt="famiglia che percorre la pista dedicata agli slittini">
                     </div>
-                    <div id="text-box2" class="text-box">
+                    <div id="text-box2" class="text-box float-to-right">
                         <h3>E se non scio?</h3>
                         <p>
                             Niente paura! In alternativa allo sci potrai concederti un’emozionante discesa con lo slittino lungo la pista dedicata o una 
@@ -89,6 +89,7 @@
                         </p>
                     </div>
                 </div>
+                <div><p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora laboriosam nam natus totam harum in assumenda repellat facilis alias sunt? Quisquam nemo molestias cum mollitia qui repellendus doloribus aliquam explicabo.</p></div>
             </div>
         </div>
         </div>
